--- a/app/templates/components/login-form.hbs
+++ b/app/templates/components/login-form.hbs
@@ -5,13 +5,23 @@
 
   <div class="mdl-card__supporting-text">
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      <input class="mdl-textfield__input" id="username" type="text" />
+      {{input type="text"
+        id="username"
+        class="mdl-textfield__input"
+        value=username
+      }}
+
       <label class="mdl-textfield__label" for="username">
         Enter your username
       </label>
     </div>
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      <input class="mdl-textfield__input" id="password" type="password" />
+      {{input type="password"
+        id="password"
+        class="mdl-textfield__input"
+        value=password
+      }}
+
       <label class="mdl-textfield__label" for="password">
         Enter your password
       </label>
@@ -19,7 +29,7 @@
   </div>
 
   <div class="mdl-card__actions">
-    <button class="app-login-form__button mdl-button mdl-js-button mdl-js-ripple-effect">
+    <button class="app-login-form__button mdl-button mdl-js-button mdl-js-ripple-effect" onclick={{action 'login'}}>
       Login
     </button>
   </div>
