Fix typo in component name

--- a/app/templates/components/chat-sidebar.hbs
+++ b/app/templates/components/chat-sidebar.hbs
@@ -16,8 +16,8 @@
   <div class="app-chat-sidebar__conversations">
     <div class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect">
       <div class="mdl-tabs__tab-bar">
-        <a href="#collegues-panel" class="mdl-tabs__tab is-active">
-          <span class="mdl-badge mdl-badge--overlap">Collegues</span>
+        <a href="#colleagues-panel" class="mdl-tabs__tab is-active">
+          <span class="mdl-badge mdl-badge--overlap">Colleagues</span>
         </a>
         <a href="#rooms-panel" class="mdl-tabs__tab">
           <span class="mdl-badge mdl-badge--overlap">Rooms</span>
@@ -25,18 +25,18 @@
       </div>
 
       <div class="app-chat-sidebar__conversations-panels">
-        <div class="app-chat-sidebar__conversations-panel mdl-tabs__panel is-active" id="collegues-panel">
+        <div class="app-chat-sidebar__conversations-panel mdl-tabs__panel is-active" id="colleagues-panel">
           <ul class="mdl-list">
-            {{chat-collegue-item}}
-            {{chat-collegue-item}}
-            {{chat-collegue-item}}
-            {{chat-collegue-item}}
-            {{chat-collegue-item}}
-            {{chat-collegue-item}}
-            {{chat-collegue-item}}
-            {{chat-collegue-item}}
-            {{chat-collegue-item}}
-            {{chat-collegue-item}}
+            {{chat-colleague-item}}
+            {{chat-colleague-item}}
+            {{chat-colleague-item}}
+            {{chat-colleague-item}}
+            {{chat-colleague-item}}
+            {{chat-colleague-item}}
+            {{chat-colleague-item}}
+            {{chat-colleague-item}}
+            {{chat-colleague-item}}
+            {{chat-colleague-item}}
           </ul>
         </div>
 
