--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,4 +1,6 @@
 @import 'utils';
 @import 'components/login-page';
 @import 'components/login-form';
+@import 'components/chat-page';
 @import 'components/chat-sidebar';
+@import 'components/chat-room-info';
