--- a/app/templates/components/chat-page.hbs
+++ b/app/templates/components/chat-page.hbs
@@ -1,7 +1,12 @@
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
+<div class="app-chat-page mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
   <section class="mdl-layout__drawer">
     {{chat-sidebar}}
   </section>
-  <main class="mdl-layout__content">
+  <main class="app-chat-page__content mdl-layout__content">
+    <section class="app-chat-page__room">
+    </section>
+    <section class="app-chat-page__room-info mdl-color--grey-50">
+      {{chat-room-info}}
+    </section>
   </main>
 </div>
