Start the work on Chat Room
In the Chat Room section the user will be able to recieve and send
messages to the members of the room he is in.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -3,4 +3,6 @@
 @import 'components/login-form';
 @import 'components/chat-page';
 @import 'components/chat-sidebar';
+@import 'components/chat-room';
+@import 'components/chat-message';
 @import 'components/chat-room-info';
