--- a/app/templates/components/chat-page.hbs
+++ b/app/templates/components/chat-page.hbs
@@ -4,6 +4,7 @@
   </section>
   <main class="app-chat-page__content mdl-layout__content">
     <section class="app-chat-page__room">
+      {{chat-room}}
     </section>
     <section class="app-chat-page__room-info mdl-color--grey-50">
       {{chat-room-info}}
