Pass the retrieved Users and Rooms to the sidebar

--- a/app/templates/components/chat-page.hbs
+++ b/app/templates/components/chat-page.hbs
@@ -1,6 +1,6 @@
 <div class="app-chat-page mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
   <section class="mdl-layout__drawer">
-    {{chat-sidebar}}
+    {{chat-sidebar users=model.users rooms=model.rooms}}
   </section>
   <main class="app-chat-page__content mdl-layout__content">
     <section class="app-chat-page__room">
