Include Handlebars placeholders in DOM

--- a/app/templates/components/chat-room-item.hbs
+++ b/app/templates/components/chat-room-item.hbs
@@ -1,9 +1,9 @@
 <li class="mdl-list__item">
   <span class="mdl-list__item-primary-content">
     <span class="mdl-list__item-avatar">
-      <img class="app--circularize app--full-width" src="images/zara.png" alt="User profile picture"/>
+      <img class="app--circularize app--full-width" src="images/{{image}}" alt="User profile picture"/>
     </span>
-    <span>warp</span>
+    <span>{{name}}</span>
   </span>
   <span class="mdl-list__item-secondary-content">
     <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">chat_bubble</i></a>
