--- a/app/templates/components/chat-colleague-item.hbs
+++ b/app/templates/components/chat-colleague-item.hbs
@@ -1,14 +1,14 @@
 <li class="mdl-list__item mdl-list__item--two-line">
   <span class="mdl-list__item-primary-content">
     <span class="mdl-list__item-avatar">
-      <img class="app--circularize app--full-width" src="images/zara.png" alt="User profile picture"/>
+      <img
+        class="app--circularize app--full-width"
+        src="images/{{user.image}}"
+        alt="User profile picture"/>
     </span>
-    <span>lucat</span>
+    <span>{{user.username}}</span>
     <span class="mdl-list__item-sub-title">
-      Online
+      {{user.state.name}}
     </span>
-  </span>
-  <span class="mdl-list__item-secondary-content">
-    <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">chat_bubble</i></a>
   </span>
 </li>
