Get image from root

--- a/app/templates/components/chat-colleague-item.hbs
+++ b/app/templates/components/chat-colleague-item.hbs
@@ -3,7 +3,7 @@
     <span class="mdl-list__item-avatar">
       <img
         class="app--circularize app--full-width"
-        src="images/{{user.image}}"
+        src="/images/{{user.image}}"
         alt="User profile picture"/>
     </span>
     <span>{{user.username}}</span>
