--- a/app/templates/components/chat-colleague-member-item.hbs
+++ b/app/templates/components/chat-colleague-member-item.hbs
@@ -1,7 +1,7 @@
 <li class="mdl-list__item mdl-list__item--two-line">
   <span class="mdl-list__item-primary-content">
     <span class="mdl-list__item-avatar">
-      <img class="app--circularize app--full-width" src="images/zara.png" alt="User profile picture"/>
+      <img class="app--circularize app--full-width" src="/images/zara.png" alt="User profile picture"/>
     </span>
     <span>lucat</span>
     <span class="mdl-list__item-sub-title">
