--- a/app/templates/components/chat-room-item.hbs
+++ b/app/templates/components/chat-room-item.hbs
@@ -1,7 +1,7 @@
 <li class="mdl-list__item">
   <span class="mdl-list__item-primary-content">
     <span class="mdl-list__item-avatar">
-      <img class="app--circularize app--full-width" src="images/{{image}}" alt="User profile picture"/>
+      <img class="app--circularize app--full-width" src="/images/{{image}}" alt="User profile picture"/>
     </span>
     <span>{{name}}</span>
   </span>
