--- a/app/templates/components/chat-page.hbs
+++ b/app/templates/components/chat-page.hbs
@@ -1,13 +1,8 @@
-<div class="app-chat-page mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
   <section class="mdl-layout__drawer">
     {{chat-sidebar users=model.users rooms=model.rooms}}
   </section>
-  <main class="app-chat-page__content mdl-layout__content">
-    <section class="app-chat-page__room">
-      {{chat-room}}
-    </section>
-    <section class="app-chat-page__room-info mdl-color--grey-50">
-      {{chat-room-info}}
-    </section>
+  <main class="mdl-layout__content">
+    {{chat-room}}
   </main>
 </div>
