Create app/index and app/room routes
When the user logs in the app, he should see the sidebar and a
welcome message. When he clicks on a Room Menu Item within the
sidebar, the app should redirect him to /app/room/{room-id},
hiding the welcome message and showing the room details.

--- a/app/templates/components/chat-page.hbs
+++ b/app/templates/components/chat-page.hbs
@@ -3,6 +3,6 @@
     {{chat-sidebar users=model.users rooms=model.rooms}}
   </section>
   <main class="mdl-layout__content">
-    {{chat-room}}
+    {{outlet}}
   </main>
 </div>
