--- a/app/templates/components/chat-sidebar-rooms-list.hbs
+++ b/app/templates/components/chat-sidebar-rooms-list.hbs
@@ -1,5 +1,5 @@
-<ul class="mdl-list">
+<div class="mdl-list">
   {{#each rooms as |room|}}
     {{chat-room-item room=room}}
   {{/each}}
-</ul>
+</div>
