--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -3,5 +3,6 @@
 @import 'components/login-form';
 @import 'components/chat-sidebar';
 @import 'components/chat-room';
+@import 'components/chat-room-item';
 @import 'components/chat-message';
 @import 'components/chat-room-info';
