--- a/app/templates/components/chat-room-item.hbs
+++ b/app/templates/components/chat-room-item.hbs
@@ -1,4 +1,4 @@
-<li class="mdl-list__item">
+{{#link-to "app.room" room class="app-chat-room-item mdl-list__item"}}
   <span class="mdl-list__item-primary-content">
     <span class="mdl-list__item-avatar">
       <img class="app--circularize app--full-width" src="/images/{{image}}" alt="User profile picture"/>
@@ -6,6 +6,8 @@
     <span>{{name}}</span>
   </span>
   <span class="mdl-list__item-secondary-content">
-    <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">chat_bubble</i></a>
+    <span class="mdl-list__item-secondary-action">
+      <i class="material-icons">chat_bubble</i>
+    </span>
   </span>
-</li>
+{{/link-to}}
