Add hover and active styling to Rooms Menu Items

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,3 +1,6 @@
+@import 'variables';
+@import '../../bower_components/material-design-lite/src/_color-definitions';
+@import '../../bower_components/material-design-lite/src/palette/_palette';
 @import 'utils';
 @import 'components/login-page';
 @import 'components/login-form';
