--- a/app/styles/components/_chat-room-item.scss
+++ b/app/styles/components/_chat-room-item.scss
@@ -1,3 +1,12 @@
 .app-chat-room-item {
   text-decoration: none;
+  transition: background-color 0.5s ease;
+}
+
+.app-chat-room-item:hover {
+  @extend .mdl-color--grey-300;
+}
+
+.app-chat-room-item.active {
+  @extend .mdl-color--accent;
 }
