--- a/app/templates/components/chat-room.hbs
+++ b/app/templates/components/chat-room.hbs
@@ -7,6 +7,6 @@
     </div>
   </div>
   <div class="app-chat-room__info">
-    {{chat-room-info}}
+    {{chat-room-info room=room}}
   </div>
 </div>
