--- a/app/templates/components/chat-sidebar.hbs
+++ b/app/templates/components/chat-sidebar.hbs
@@ -3,7 +3,7 @@
     <div class="mdl-list__item mdl-list__item--two-line">
       <span class="mdl-list__item-primary-content">
         <span class="mdl-list__item-avatar">
-          <img class="app--circularize app--full-width" src="/images/zara.png" alt="User profile picture"/>
+          <img class="app--circularize app--full-width" src="/images/{{session.user.image}}" alt="User profile picture"/>
         </span>
         <span>{{session.user.username}}</span>
         <span class="mdl-list__item-sub-title">
