--- a/app/templates/components/chat-sidebar-colleagues-list.hbs
+++ b/app/templates/components/chat-sidebar-colleagues-list.hbs
@@ -1,5 +1,5 @@
-<ul class="mdl-list">
+<div class="mdl-list">
   {{#each users as |user|}}
     {{chat-colleague-item user=user}}
   {{/each}}
-</ul>
+</div>
