--- a/app/templates/components/chat-colleague-item.hbs
+++ b/app/templates/components/chat-colleague-item.hbs
@@ -1,4 +1,4 @@
-<li class="mdl-list__item mdl-list__item--two-line">
+<div class="mdl-list__item mdl-list__item--two-line">
   <span class="mdl-list__item-primary-content">
     <span class="mdl-list__item-avatar">
       <img
@@ -11,4 +11,6 @@
       {{user.state.name}}
     </span>
   </span>
-</li>
+
+  {{yield}}
+</div>
