Use Handlebar templates

--- a/app/templates/components/chat-room-info.hbs
+++ b/app/templates/components/chat-room-info.hbs
@@ -4,7 +4,7 @@
       <span class="mdl-list__item">
         <span class="mdl-list__item-primary-content">
           <span class="mdl-list__item-avatar">
-            <img class="app--circularize app--full-width" src="/images/zara.png" alt="User profile picture"/>
+            <img class="app--circularize app--full-width" src="/images/{{room.image}}" alt="User profile picture"/>
           </span>
           <span>{{room.name}}</span>
         </span>
