--- a/app/templates/components/chat-room-item.hbs
+++ b/app/templates/components/chat-room-item.hbs
@@ -1,9 +1,9 @@
 {{#link-to "app.room" room class="app-chat-room-item mdl-list__item"}}
   <span class="mdl-list__item-primary-content">
     <span class="mdl-list__item-avatar">
-      <img class="app--circularize app--full-width" src="/images/{{image}}" alt="User profile picture"/>
+      <img class="app--circularize app--full-width" src="/images/{{room.uiImage}}" alt="User profile picture"/>
     </span>
-    <span>{{name}}</span>
+    <span>{{room.uiName}}</span>
   </span>
   <span class="mdl-list__item-secondary-content">
     <span class="mdl-list__item-secondary-action">
