Implement feature to enable the user to change his online state
When logged in the user will be able to change his online state to
online, away or offline (logs out). When doing so apart from
changing the UI and updating the Store we need to persist it to the
DB and notify other users (using webservices).

--- a/app/templates/components/chat-sidebar.hbs
+++ b/app/templates/components/chat-sidebar.hbs
@@ -7,7 +7,17 @@
         </span>
         <span>{{session.user.username}}</span>
         <span class="mdl-list__item-sub-title">
-          {{session.user.state.name}}
+          <span id="app-chat-sidebar__state">
+            {{session.user.state.name}}
+          </span>
+          
+          <ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect" for="app-chat-sidebar__state">
+            {{#each states as |state|}}
+              <li class="mdl-menu__item" onclick={{action 'changeState' state}}>
+                {{state.name}}
+              </li>
+            {{/each}}
+          </ul>
         </span>
       </span>
     </div>
