--- a/app/templates/components/chat-sidebar.hbs
+++ b/app/templates/components/chat-sidebar.hbs
@@ -12,11 +12,17 @@
           </span>
           
           <ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect" for="app-chat-sidebar__state">
-            {{#each states as |state|}}
-              <li class="mdl-menu__item" onclick={{action 'changeState' state}}>
-                {{state.name}}
-              </li>
-            {{/each}}
+            <li class="mdl-menu__item" onclick={{action 'changeState' states.online}}>
+              {{states.online.name}}
+            </li>
+
+            <li class="mdl-menu__item" onclick={{action 'changeState' states.away}}>
+              {{states.away.name}}
+            </li>
+
+            <li class="mdl-menu__item mdl-color--red mdl-color-text--white" onclick={{action 'changeState' states.offline}}>
+              {{states.offline.name}}
+            </li>
           </ul>
         </span>
       </span>
