Include options section for convo

--- a/app/templates/components/chat-room-info.hbs
+++ b/app/templates/components/chat-room-info.hbs
@@ -8,7 +8,27 @@
           </span>
           <span>{{room.uiName}}</span>
         </span>
+        <span class="mdl-list__item-secondary-action">
+          <i class="material-icons">close</i>
+        </span>
       </span>
+    </div>
+  </div>
+
+  <div class="chat-room-info__section">
+    <div class="mdl-grid">
+      <div class="mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--1-col-phone mdl-typography--text-center">
+        <i class="material-icons">add</i>
+      </div>
+      <div class="mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--1-col-phone mdl-typography--text-center">
+        <i class="material-icons">mic</i>
+      </div>
+      <div class="mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--1-col-phone mdl-typography--text-center">
+        <i class="material-icons">videocam</i>
+      </div>
+      <div class="mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--1-col-phone mdl-typography--text-center">
+        <i class="material-icons">close</i>
+      </div>
     </div>
   </div>
 
