Implement message persistance

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -9,3 +9,4 @@
 @import 'components/chat-room-item';
 @import 'components/chat-message';
 @import 'components/chat-room-info';
+@import 'components/chat-room-conversation';
