--- a/app/templates/components/chat-message.hbs
+++ b/app/templates/components/chat-message.hbs
@@ -1,6 +1,7 @@
+<hr/>
 <div class="app-chat-message">
   <div class="app-chat-message__image">
-    <img class="app--full-width app--circularize" src="/images/zara.png" alt="lucat" />
+    <img class="app--full-width app--circularize" src="/images/{{message.user.image}}" alt="{{message.user.username}} profile picture" />
   </div>
-  <div class="app-chat-message__content">yo</div>
+  <div class="app-chat-message__content">{{message.content}}</div>
 </div>
