Improve alt text

--- a/app/templates/components/chat-colleague-item.hbs
+++ b/app/templates/components/chat-colleague-item.hbs
@@ -4,7 +4,7 @@
       <img
         class="app--circularize app--full-width"
         src="/images/{{user.image}}"
-        alt="User profile picture"/>
+        alt="{{user.username}} profile picture"/>
     </span>
     <span>{{user.username}}</span>
     <span class="mdl-list__item-sub-title">
