Include link to exit room

--- a/app/templates/components/chat-room-info.hbs
+++ b/app/templates/components/chat-room-info.hbs
@@ -9,7 +9,7 @@
           <span>{{room.uiName}}</span>
         </span>
         <span class="mdl-list__item-secondary-action">
-          <i class="material-icons">close</i>
+          {{#link-to 'app'}}<i class="material-icons">close</i>{{/link-to}}
         </span>
       </span>
     </div>
