--- a/app/templates/components/chat-message.hbs
+++ b/app/templates/components/chat-message.hbs
@@ -3,5 +3,5 @@
   <div class="app-chat-message__image">
     <img class="app--full-width app--circularize" src="/images/{{message.user.image}}" alt="{{message.user.username}} profile picture" />
   </div>
-  <div class="app-chat-message__content">{{message.content}}</div>
+  <div class="app-chat-message__content">{{{content}}}</div>
 </div>
