--- a/app/templates/components/login-form.hbs
+++ b/app/templates/components/login-form.hbs
@@ -1,4 +1,4 @@
-<div class="mdl-card mdl-shadow--2dp">
+<div class="app-login-form__card mdl-card mdl-shadow--2dp">
   <div class="mdl-card__title mdl-color--primary mdl-color-text--white">
     <h2 class="mdl-card__title-text">Login</h2>
   </div>
