--- a/app/templates/components/chat-room-info.hbs
+++ b/app/templates/components/chat-room-info.hbs
@@ -17,7 +17,7 @@
 <div class="chat-room-info__section">
   <div class="mdl-grid">
     <div class="mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--1-col-phone mdl-typography--text-center">
-      <i class="material-icons">add</i>
+      <i class="material-icons" onclick={{action "showInviteDialog"}}>add</i>
     </div>
     <div class="mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--1-col-phone mdl-typography--text-center">
       <i class="material-icons">mic</i>
