--- a/app/templates/components/chat-room-info.hbs
+++ b/app/templates/components/chat-room-info.hbs
@@ -8,7 +8,7 @@
         <span>{{room.uiName}}</span>
       </span>
       <span class="mdl-list__item-secondary-action">
-        {{#link-to 'app'}}<i class="material-icons">close</i>{{/link-to}}
+        {{#link-to 'chat'}}<i class="material-icons">close</i>{{/link-to}}
       </span>
     </span>
   </div>
