--- a/app/templates/components/chat-room-item.hbs
+++ b/app/templates/components/chat-room-item.hbs
@@ -1,4 +1,4 @@
-{{#link-to "app.room" room class="app-chat-room-item__link mdl-list__item mdl-js-ripple-effect"}}
+{{#link-to "chat.room" room class="app-chat-room-item__link mdl-list__item mdl-js-ripple-effect"}}
   <span class="mdl-list__item-primary-content">
     <span class="mdl-list__item-avatar">
       <img class="app--circularize app--full-width" src="/images/{{room.uiImage}}" alt="User profile picture"/>
