Add func to create a new room

--- a/app/templates/components/chat-page.hbs
+++ b/app/templates/components/chat-page.hbs
@@ -1,3 +1,5 @@
+{{chat-fab}}
+
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
   <section class="mdl-layout__drawer">
     {{chat-sidebar users=model.users rooms=model.rooms}}
