--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -12,3 +12,4 @@
 @import 'components/chat-room-info';
 @import 'components/chat-room-conversation';
 @import 'components/chat-invite-dialog';
+@import 'components/chat-fab';
