Fix action name

--- a/app/templates/components/chat-room-creation-dialog.hbs
+++ b/app/templates/components/chat-room-creation-dialog.hbs
@@ -12,6 +12,6 @@
   </div>
   <div class="mdl-dialog__actions">
     <button class="mdl-button" onclick={{action "create"}}>Create</button>
-    <button class="mdl-button" onclick={{action "closeModal"}}>Close</button>
+    <button class="mdl-button" onclick={{action "closeDialog"}}>Close</button>
   </div>
 </dialog>
