Open private rooms by clicking on Collegue Items
This commit includes the functionality to open private rooms by
clicking on the a Collegue Item. When doing so there are two
outcomes:

  In this case the user is redirected to the private room.

  In this case:
    1. Temp private room is created.
    2. User is redirected to the private room.
    3. When user submits a message, the private room is persisted.
       followed by the persistance of the message.

--- a/app/templates/components/chat-colleague-item.hbs
+++ b/app/templates/components/chat-colleague-item.hbs
@@ -1,4 +1,4 @@
-<div class="mdl-list__item mdl-list__item--two-line">
+<div class="mdl-list__item mdl-list__item--two-line" onclick={{action "openRoom"}}>
   <span class="mdl-list__item-primary-content">
     <span class="mdl-list__item-avatar">
       <img
