--- a/app/styles/components/_chat-room-info.scss
+++ b/app/styles/components/_chat-room-info.scss
@@ -2,3 +2,14 @@
   margin-bottom: 0px;
   padding-left: 16px;
 }
+
+.app-room-info__actions {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.app-room-info__action {
+  cursor: pointer;
+}
