--- a/app/templates/components/chat-page.hbs
+++ b/app/templates/components/chat-page.hbs
@@ -4,7 +4,7 @@
   <section class="mdl-layout__drawer">
     {{chat-sidebar users=model.users rooms=model.rooms}}
   </section>
-  <main class="mdl-layout__content">
+  <main role="main" class="mdl-layout__content">
     {{outlet}}
   </main>
 </div>
