Include styling for when user is focus on component

--- a/app/styles/components/_chat-room-item.scss
+++ b/app/styles/components/_chat-room-item.scss
@@ -2,9 +2,10 @@
   position: relative;
   text-decoration: none;
   transition: background-color 0.5s ease;
+  outline: none;
 }
 
-.app-chat-room-item__link:hover {
+.app-chat-room-item__link:hover, .app-chat-room-item__link:focus {
   @extend .mdl-color--grey-300;
 }
 
