Include styling for chat-colleague-item component

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -7,6 +7,7 @@
 @import 'components/login-form';
 @import 'components/chat-sidebar';
 @import 'components/chat-room';
+@import 'components/chat-colleague-item';
 @import 'components/chat-room-item';
 @import 'components/chat-message';
 @import 'components/chat-room-info';
