Reduce the font size of the alt text of an image

--- a/app/templates/components/chat-colleague-item.hbs
+++ b/app/templates/components/chat-colleague-item.hbs
@@ -1,7 +1,7 @@
 <span class="mdl-list__item-primary-content">
   <span class="mdl-list__item-avatar">
     <img
-      class="app--circularize app--full-width"
+      class="app--circularize app--full-width mdl-typography--caption"
       src="/images/{{user.image}}"
       alt="{{user.username}} profile picture"/>
   </span>
