--- a/app/templates/components/chat-room-info.hbs
+++ b/app/templates/components/chat-room-info.hbs
@@ -3,7 +3,9 @@
     <span class="mdl-list__item">
       <span class="mdl-list__item-primary-content">
         <span class="mdl-list__item-avatar">
-          <img class="app--circularize app--full-width" src="/images/{{room.uiImage}}" alt="{{room.uiName}} room picture"/>
+          <img class="app--circularize app--full-width mdl-typography--caption"
+            src="/images/{{room.uiImage}}"
+            alt="{{room.uiName}} room picture"/>
         </span>
         <span>{{room.uiName}}</span>
       </span>
