List only valid friends
Currently the users with whome the logged in user was able to chat
with (a.k.a Colleague's List) also listed the user himself. This
commit changes this.

Note that the logic to not list bots was moved from the template to
the JS file since it wasn't possible to do multiple checks.

--- a/app/templates/components/chat-sidebar-colleagues-list.hbs
+++ b/app/templates/components/chat-sidebar-colleagues-list.hbs
@@ -1,7 +1,5 @@
 <ul class="mdl-list">
-  {{#each users as |user|}}
-    {{#unless user.bot}}
-      {{chat-colleague-item user=user}}
-    {{/unless}}
+  {{#each friends as |user|}}
+    {{chat-colleague-item user=user}}
   {{/each}}
 </ul>
