Display default image if user doesn not have one

--- a/app/templates/components/chat-colleague-item.hbs
+++ b/app/templates/components/chat-colleague-item.hbs
@@ -2,7 +2,7 @@
   <span class="mdl-list__item-avatar">
     <img
       class="app--circularize app--full-width mdl-typography--caption"
-      src="/images/{{user.image}}"
+      src="/images/{{user.uiImage}}"
       alt="{{user.username}} profile picture"/>
   </span>
   <span>{{user.username}}</span>
