--- a/app/templates/components/chat-sidebar.hbs
+++ b/app/templates/components/chat-sidebar.hbs
@@ -3,7 +3,7 @@
     <span class="mdl-list__item-primary-content">
       <span class="mdl-list__item-avatar">
         <img class="app--circularize app--full-width mdl-typography--caption"
-          src="/images/{{session.user.image}}"
+          src="/images/{{session.user.uiImage}}"
           alt="{{session.user}} profile picture"/>
       </span>
       <span>{{session.user.username}}</span>
