Display default image if user does not have one

--- a/app/templates/components/chat-message.hbs
+++ b/app/templates/components/chat-message.hbs
@@ -1,4 +1,4 @@
 <div class="app-chat-message__image">
-  <img class="app--full-width app--circularize" src="/images/{{message.user.image}}" alt="{{message.user.username}} profile picture" />
+  <img class="app--full-width app--circularize" src="/images/{{message.user.uiImage}}" alt="{{message.user.username}} profile picture" />
 </div>
 <div class="app-chat-message__content">{{{content}}}</div>
