--- a/app/templates/components/chat-fab.hbs
+++ b/app/templates/components/chat-fab.hbs
@@ -4,7 +4,14 @@
 
 <ul class="mdl-menu mdl-menu--top-right mdl-js-menu mdl-js-ripple-effect"
     data-mdl-for="app-chat-fab__button">
-  <li class="mdl-menu__item" onclick={{action "openRoomCreationDialog"}}>Create Room</li>
+  {{#if grants.createBot}}
+    <li class="mdl-menu__item">
+      Manage Bots <kbd>CTRL + M</kbd>
+    </li>
+  {{/if}}
+  <li class="mdl-menu__item" onclick={{action "openRoomCreationDialog"}}>
+    Create Room <kbd>CTRL + M</kbd>
+  </li>
 </ul>
 
 {{chat-room-creation-dialog}}
