Rename sidebar-item mixin to list-item

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 @import '../../bower_components/material-design-lite/src/_color-definitions';
 @import '../../bower_components/material-design-lite/src/palette/_palette';
-@import 'mixins/sidebar-item';
+@import 'mixins/list-item';
 @import 'utils';
 @import 'shims';
 @import 'components/chat-sidebar';
