Include bot management page
In this page a user with CREATE_BOT grant type will be able to
manage his bots.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -13,3 +13,4 @@
 @import 'components/chat-room-conversation';
 @import 'components/chat-invite-dialog';
 @import 'components/chat-fab';
+@import 'components/chat-bots';
